--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -22,14 +22,32 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      # Add or replace dependency steps here
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v37
+        with:
+          files_ignore: .github/**
+      - name: List all changed files
+        run: |
+          if [ ${{ steps.changed-files.outputs.all_changed_files_count }} -eq 0 ]; then
+            echo "No changed files"
+          else
+            for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+              echo "$file was changed"
+            done
+          fi
       - name: Rubocop
-        run: bundle exec rubocop --parallel
+        run: |
+          if [ ${{ steps.changed-files.outputs.all_changed_files_count }} -eq 0 ]; then
+            echo "Skipped"
+          else
+            bundle exec rubocop ${{ steps.changed-files.outputs.all_changed_files }} --parallel
+          fi
   test:
     timeout-minutes: 1
     runs-on: ubuntu-latest
@@ -53,13 +71,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      # Add or replace dependency steps here
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
-      # Add or replace database setup steps here
       - name: Set up database schema
         run:
           bundle exec rake db:create db:schema:load
