--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -31,7 +31,14 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v37
         with:
-          files_ignore: .github/**
+          files_ignore: |
+            .github/**
+            Dockerfile
+            Gemfile.lock
+            .ruby-version
+            .rubocop.yml
+            .rubocop_todo.yml
+            .rubocop_base.yml
       - name: List all changed files
         run: |
           if [ ${{ steps.changed-files.outputs.all_changed_files_count }} -eq 0 ]; then
