--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -17,8 +17,30 @@ env:
   RUBY_VERSION: 3.2.2
 
 jobs:
+  changed-files:
+    runs-on: ubuntu-latest
+    outputs:
+      app_changed_files: ${{ steps.changed-files.outputs.app_all_changed_files }}
+      rspec_changed_files: ${{ steps.changed-files.outputs.rspec_all_changed_files }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v37
+        with:
+          files_yaml: |
+            app:
+              - '!spec/**'
+            rspec:
+              - 'spec/**'
+
   rubocop:
     runs-on: ubuntu-latest
+    needs:
+      - changed-files
+    if: #needs.changed-files.outputs.app_changed_files[0] != null
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,34 +49,18 @@ jobs:
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v37
-        with:
-          files_ignore: |
-            .github/**
-            Dockerfile
-            Gemfile.lock
-            .ruby-version
-            .rubocop.yml
-            .rubocop_todo.yml
-            .rubocop_base.yml
-      - name: List all changed files
+      - name: Get outputs
         run: |
-          if [ ${{ steps.changed-files.outputs.all_changed_files_count }} -eq 0 ]; then
-            echo "No changed files"
-          else
-            for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-              echo "$file was changed"
-            done
-          fi
+          echo "app_changed_files: ${{ needs.changed-files.outputs.app_changed_files }}"
+          echo "rspec_changed_files: ${{ needs.changed-files.outputs.rspec_changed_files }}"
       - name: Rubocop
         run: |
-          if [ ${{ steps.changed-files.outputs.all_changed_files_count }} -eq 0 ]; then
-            echo "Skipped"
-          else
-            bundle exec rubocop ${{ steps.changed-files.outputs.all_changed_files }} --parallel
-          fi
+          echo "Testing 1: ${{ needs.changed-files.outputs.app_changed_files == '' }}"
+          echo "Testing 2: ${{ needs.changed-files.outputs.app_changed_files != '' }}"
+          echo "Testing 3: ${{ needs.changed-files.outputs.app_changed_files == null }}"
+          echo "Testing 4: ${{ needs.changed-files.outputs.app_changed_files != null }}"
+          echo "Running rubocop on ${{ needs.changed-files.outputs.app_changed_files }}"
+          bundle exec rubocop ${{ needs.changed-files.outputs.app_changed_files }} --parallel --force-exclusion
   test:
     timeout-minutes: 1
     runs-on: ubuntu-latest
